components/workspaces/production/stone-prd-host1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    provider: workspaces
    app: rest-api-server
  name: workspaces-rest-api-server
  namespace: workspaces-system
spec:
  port:
    targetPort: 8000
  tls:
    termination: edge
  to:
    kind: Service
    name: workspaces-rest-api-server
    weight: 100
  wildcardPolicy: None
